--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "name": "react-learning",
   "lockfileVersion": 3,
   "requires": true,
-  "packages": {}
+  "packages": {
+    "": {
+      "name": "react-learning"
+    }
+  }
 }
+
